--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 body {
-  background-color: black;
+  background-color: #0d0d0d;
+  color: #f5f5f5;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  margin: 0;
 }
+
+header {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 h1 {
-  color: antiquewhite;
+  font-size: 2.5em;
+  color: #ffd700;
+}
+
+h2 {
+  font-size: 1.5em;
+  color: #f5f5f5;
 }
