--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,32 @@ section strong {
 .experiencia-laboral li {
   color: #f5f5f5;
 }
+.formacion-academica {
+  background-color: #2c2c2c;
+  border-left: 5px solid #f1c40f;
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+}
+
+.formacion-academica h3 {
+  color: #ffd700;
+  margin-top: 0;
+}
+.experiencia-relevante {
+  background-color: #262626;
+  border-left: 5px solid #f1c40f;
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+}
+
+.experiencia-relevante h3 {
+  color: #f9d923;
+  margin-top: 0;
+}
+
+.experiencia-relevante li {
+  margin: 10px 0;
+  color: #f0f0f0;
+}
