--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #0d0d0d;
+  background: linear-gradient(145deg, #0d0d0d, #6c6a6a, #fee607);
+  background-attachment: fixed;
   color: #f5f5f5;
   font-family: Arial, sans-serif;
   padding: 20px;
