--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,30 @@ nav a {
 nav a:hover {
   text-decoration: underline;
 }
+.cursos {
+  background-color: #1f1f1f;
+  border-left: 5px solid #f5c518;
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 30px;
+}
+
+.cursos h3 {
+  color: #ffd700;
+}
+
+.cursos ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.cursos li {
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #333;
+  color: #f5f5f5;
+}
+
+.cursos strong {
+  color: #f1c40f;
+}
